add route to show single newest post

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -8,6 +8,11 @@ blog_post:
     defaults:
         _controller: BlogBundle:Blog:post
 
+blog_new:
+    pattern:  /blog/new
+    defaults:
+        _controller: BlogBundle:Blog:new
+
 blog_categories:
     pattern:  /blog/categories
     defaults:
